# runpod-cli

./: .env.example  .env.secrets.example  .gitignore  README.md  Taskfile.yml  pyproject.toml
scripts/: apply-secrets.sh  pod-start.sh
src/runpod_cli/: auth.py
src/runpod_cli/cli/: _helpers.py  main.py  pod.py  template.py  volume.py
src/runpod_cli/clients/: runpod.py
src/runpod_cli/models/: base.py  pod.py  template.py
