[project]
name = "runpod-cli"
version = "0.1.0"
description = "RunPod infrastructure CLI"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.12",
    "pydantic-settings>=2.8",
    "python-dotenv>=1.1",
    "pyyaml>=6.0",
    "typer>=0.24",
]

[project.scripts]
runpod-cli = "runpod_cli.cli.main:main"
rp = "runpod_cli.cli.main:main" # alias

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runpod_cli"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
